--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#00b09c</color>
+    <color name="primary_light">#59e3cd</color>
+    <color name="primary_dark">#00806e</color>
+    <color name="primary_text">#F9FFFF</color>
+    <color name="secondary">#232d36</color>
+    <color name="secondary_light">#4b5660</color>
+    <color name="secondary_dark">#000210</color>
+    <color name="secondary_text">#101D25</color>
 </resources>
