--- a/app/src/main/res/drawable/border_otp_box.xml
+++ b/app/src/main/res/drawable/border_otp_box.xml
@@ -4,7 +4,7 @@
     <solid
         android:color="@color/primary_text" />
     <stroke
-        android:color="@color/primary"
+        android:color="@color/secondary"
         android:width="1dp" />
     <corners
         android:radius="10dp"/>
