--- a/app/src/main/res/drawable/ic_right_arrow.xml
+++ b/app/src/main/res/drawable/ic_right_arrow.xml
@@ -1,5 +1,5 @@
 <vector android:autoMirrored="true" android:height="42dp"
-    android:tint="@color/primary" android:viewportHeight="24"
+    android:tint="@color/secondary" android:viewportHeight="24"
     android:viewportWidth="24" android:width="42dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/primary" android:pathData="M6.23,20.23l1.77,1.77l10,-10l-10,-10l-1.77,1.77l8.23,8.23z"/>
+    <path android:fillColor="@color/secondary" android:pathData="M6.23,20.23l1.77,1.77l10,-10l-10,-10l-1.77,1.77l8.23,8.23z"/>
 </vector>
