--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/secondary">
+    android:background="@color/primary">
 
     <TextView
         android:id="@+id/verificationCodeText"
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/otp_verification_code_text"
-        android:textColor="@color/primary"
+        android:textColor="@color/secondary"
         android:textSize="@dimen/std_large_text"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@id/guideV3"
@@ -154,6 +154,7 @@
         android:textAllCaps="false"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/auth_submit_button_size"
+        app:backgroundTint="@color/secondary"
         app:layout_constraintEnd_toEndOf="@id/guideV3"
         app:layout_constraintStart_toStartOf="@id/guideV1"
         app:layout_constraintTop_toBottomOf="@id/resendOtpBox" />
