--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ChatApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.ChatApp" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary_light</item>
@@ -14,5 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="colorAccent">?attr/colorSecondary</item>
         <item name="android:textColor">@color/primary_text</item>
+        <item name="android:itemBackground">@color/primary</item>
+        <item name="itemFillColor">@color/primary</item>
     </style>
 </resources>
