--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -34,6 +34,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
-
+        app:layout_constraintTop_toBottomOf="@id/tabLayout"
+        android:background="@color/app_background"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
