--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,11 @@
     <color name="primary">#232d36</color>
     <color name="primary_light">#4b5660</color>
     <color name="primary_dark">#000210</color>
+    <color name="app_background">#101D25</color>
     <color name="secondary_text">#101D25</color>
     <color name="app_bar_text_color">#9DA5AC</color>
+    <color name="separator_color">#18252D</color>
+    <color name="message_text_color">#707980</color>
+    <color name="button_text">#F9FFFF</color>
+    <color name="message_background">#02AF9C</color>
 </resources>
