Added feature to create new groups and broadcast message

--- a/app/src/main/res/layout/activity_chat_screen.xml
+++ b/app/src/main/res/layout/activity_chat_screen.xml
@@ -33,7 +33,7 @@
 
     <EditText
         android:id="@+id/sendMessageEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/std_med"
         android:layout_marginTop="@dimen/std_small"
