--- a/app/src/main/res/layout/entity_view_holder.xml
+++ b/app/src/main/res/layout/entity_view_holder.xml
@@ -7,7 +7,7 @@
     android:background="@color/app_background">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userAvatar"
+        android:id="@+id/entityAvatar"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="W,1:1"
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
-        android:id="@+id/userName"
+        android:id="@+id/entityName"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintVertical_bias="0"
