--- a/app/src/main/res/layout/group_receiver_view_holder.xml
+++ b/app/src/main/res/layout/group_receiver_view_holder.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/std_small"
         android:background="@drawable/receiver_message_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
         android:padding="@dimen/std_small"
-        android:layout_marginBottom="@dimen/std_small"
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/senderName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/std_x_small_text"
-            android:text="@string/john_doe"
-            android:textColor="@color/primary_text"
-            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
-            />
+            android:layout_alignParentTop="true"
+            android:text="@string/john_doe"
+            android:textColor="@color/secondary"
+            android:textSize="@dimen/std_x_small_text" />
 
         <TextView
             android:id="@+id/message"
