--- a/app/src/main/res/layout/sender_view_holder.xml
+++ b/app/src/main/res/layout/sender_view_holder.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/message"
-        android:background="@drawable/sender_message_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/std_med_text"
-        android:padding="@dimen/std_small"
         android:layout_marginBottom="@dimen/std_small"
+        android:background="@drawable/sender_message_background"
+        android:padding="@dimen/std_small"
         android:text="@string/message_placeholder"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="@dimen/std_med_text"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
