--- a/app/src/main/res/layout/group_receiver_view_holder.xml
+++ b/app/src/main/res/layout/group_receiver_view_holder.xml
@@ -1,39 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/std_small">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/senderName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingStart="@dimen/std_small"
+        android:paddingTop="@dimen/std_small"
+        android:paddingEnd="@dimen/std_small"
+        android:text="@string/john_doe"
+        android:textColor="@color/secondary"
+        android:textSize="@dimen/std_x_small_text"
+        android:translationZ="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/std_small"
-        android:background="@drawable/receiver_message_background"
-        android:orientation="vertical"
-        android:padding="@dimen/std_small"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingStart="@dimen/std_small"
+        android:paddingEnd="@dimen/std_small"
+        android:paddingBottom="@dimen/std_small"
+        android:text="@string/message_placeholder"
+        android:textColor="@color/primary_text"
+        android:textSize="@dimen/std_med_text"
+        android:translationZ="1dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/senderName" />
 
-        <TextView
-            android:id="@+id/senderName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/john_doe"
-            android:textColor="@color/secondary"
-            android:textSize="@dimen/std_x_small_text" />
-
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/senderName"
-            android:layout_alignParentStart="true"
-            android:text="@string/message_placeholder"
-            android:textSize="@dimen/std_med_text" />
-    </RelativeLayout>
+    <ImageView
+        android:id="@id/messageImage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/senderName"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="@dimen/std_small"
+        android:paddingStart="@dimen/std_small"
+        android:paddingEnd="@dimen/std_small"
+        android:paddingBottom="@dimen/std_small"
+        android:text="@string/message_placeholder"
+        android:textSize="@dimen/std_med_text"
+        android:translationZ="1dp"
+        app:layout_constraintEnd_toEndOf="@id/guideV1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/senderName" />
 
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideV1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.65" />
+
+    <androidx.constraintlayout.helper.widget.Layer
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/receiver_message_background"
+        app:constraint_referenced_ids="senderName, message, messageImage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
