--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="std_x_small_text">14sp</dimen>
     <dimen name="std_small_text">16sp</dimen>
     <dimen name="std_med_text">18sp</dimen>
+    <dimen name="std_med_large_text">20sp</dimen>
     <dimen name="std_large_text">24sp</dimen>
     <dimen name="login_phone_input_text_size">18sp</dimen>
     <dimen name="auth_submit_button_size">24sp</dimen>
